<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:src="@drawable/default_image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/activity_name"
        android:textColor="@color/home_grey"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/exercisedetails_organ"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/activity_address"
        android:textColor="@color/home_grey"
        android:textSize="@dimen/home" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:drawableLeft="@drawable/exercisedetails_time"
        android:drawablePadding="5dp"
        android:gravity="center_vertical"
        android:text="@string/activity_time"
        android:textColor="@color/home_grey"
        android:textSize="@dimen/home" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp" >

        <TextView
            android:id="@+id/orgin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="10dp"
            android:drawableLeft="@drawable/exercisedetails_name1"
            android:drawablePadding="5dp"
            android:gravity="center_vertical"
            android:text="@string/activity_org"
            android:textColor="@color/home_grey"
            android:textSize="@dimen/home" />

        <TextView
            android:id="@+id/state"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/orgin"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:background="@color/home_grey_bg"
            android:padding="3dp"
            android:text="@string/activity_state"
            android:textColor="@color/black"
            android:textSize="12sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/gray" />

</LinearLayout>